--- a/ObjCCamera/Base.lproj/Main.storyboard
+++ b/ObjCCamera/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,41 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tEB-nM-TgP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ysz-02-m6O">
+                                <rect key="frame" x="0.0" y="20" width="375" height="459"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="459" id="6aP-Tw-FJb"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ysz-02-m6O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8E7-IL-m3Q"/>
+                            <constraint firstAttribute="trailing" secondItem="tEB-nM-TgP" secondAttribute="trailing" id="AXc-Jc-dJx"/>
+                            <constraint firstAttribute="bottom" secondItem="tEB-nM-TgP" secondAttribute="bottom" id="ZMa-NZ-eR5"/>
+                            <constraint firstItem="ysz-02-m6O" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZSz-2h-ocO"/>
+                            <constraint firstItem="ysz-02-m6O" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="dlu-J8-7OS"/>
+                            <constraint firstItem="tEB-nM-TgP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="h4t-1v-95P"/>
+                            <constraint firstItem="tEB-nM-TgP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mXm-Dh-BJ5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="ysz-02-m6O" id="hcy-bb-5PF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
